Add pending trademark serial references
